# neurobiomech_software

./: .gitignore  .gitmodules  MANIFEST.in  README.md  code_of_conduct.md  environment.yml  setup.py
.github/workflows/: isblacked.yml  run_backend_codecoverage.yml  run_backend_tests.yml  run_frontend_tests.yml  run_server_tests.yml  run_tests.yml
backend/: .gitignore  CMakeLists.txt  README.md  environment.yml
backend/WIP/: CMakeLists.txt  main_emg_delsys.cpp  main_emg_delsys_timings.cpp  main_rehastim.cpp  usb_connexion.cpp
backend/cmake/: FindAsio.cmake
backend/doc/: Doxyfile.in  contributing.md
backend/include/: neurobio.h  neurobioConfig.h.in  stimwalker.h  stimwalkerConfig.h  stimwalkerConfig.h.in
backend/include/Analyzer/: Analyzer.h  Analyzers.h  CyclicTimedEventsAnalyzer.h  EventConditions.h  EventPrediction.h  Exceptions.h  LiveAnalyzer.h  Prediction.h  Predictions.h  TimedEventsAnalyzer.h  TimedEventsLiveAnalyzer.h  WalkingCycleFromDelsysPressureAnalyzer.h  WalkingLiveAnalyzer.h  all.h
backend/include/Data/: DataPoint.h  FixedTimeSeries.h  TimeSeries.h  all.h
backend/include/Devices/: CollectorData.h  CollectorDeviceAbstract.h  DelsysEmgDevice.h  DeviceAbstract.h  Devices.h  DevicesData.h  Exceptions.h  Lokomat.h  MagstimRapidDevice.h  MagstimRapidExceptions.h  NidaqDevice.h  StimulatorData.h  StimulatorDeviceAbstract.h  UsbDevice.h  all.h
backend/include/Devices/Concrete/: DelsysAnalogDevice.h  DelsysEmgDevice.h  LiveDataStreaming.h  Lokomat.h  LokomatDevice.h  MagstimRapidDevice.h  NidaqDevice.h  all.h
backend/include/Devices/Data/: CollectorData.h  Data.h  DataCollection.h  DataDevices.h  DataPoint.h  DevicesData.h  StimulatorData.h  TimeSeries.h  TimeSeriesData.h  all.h
backend/include/Devices/Generic/: AsyncDataCollector.h  AsyncDevice.h  Collector.h  CollectorData.h  CollectorDeviceAbstract.h  DataCollector.h  DelsysBaseDevice.h  Device.h  DeviceAbstract.h  Exceptions.h  SerialPortDevice.h  Stimulator.h  StimulatorData.h  StimulatorDevice.h  StimulatorDeviceAbstract.h  TcpDevice.h  UsbDevice.h  UsbExceptions.h  all.h
backend/include/Server/: TcpClient.h  TcpServer.h  all.h
backend/include/Utils/: Benchmark.h  CppMacros.h  Error.h  Exceptions.h  GenericCallback.h  Logger.h  NeurobioEvent.h  Path.h  RollingVector.h  StimwalkerEvent.h  String.h  Timer.h  Timestamp.h  UsbDevice.h  all.h
backend/run/: CMakeLists.txt  example_delsys.cpp  example_devices.cpp  example_magstim.cpp  example_old_lokomat.cpp  example_server.cpp  main_emg_delsys.cpp  main_emg_delsys_timings.cpp  main_lokomat.cpp  main_magstim.cpp  main_server.cpp
backend/run/scienceMode2/: ScienceStim2_Demo_Linux.mdl  ScienceStim2_Demo_Windows.mdl  ScienceStim2_Help.html  ScienceStim2_Lib.mdl  compile_win.m  serial_windows.cpp  serialport.h
backend/src/: main.cpp
backend/src/Analyzer/: Analyzers.cpp  CMakeLists.txt  CyclicTimedEventsAnalyzer.cpp  EventConditions.cpp  EventPrediction.cpp  Prediction.cpp  Predictions.cpp  TimedEventsAnalyzer.cpp  TimedEventsLiveAnalyzer.cpp  WalkingCycleFromDelsysPressureAnalyzer.cpp  WalkingLiveAnalyzer.cpp
backend/src/Data/: CMakeLists.txt  DataPoint.cpp  FixedTimeSeries.cpp  TimeSeries.cpp
backend/src/Devices/: CMakeLists.txt  DataDevices.cpp  DelsysEmgDevice.cpp  Devices.cpp  DevicesData.cpp  MagstimRapidDevice.cpp  NidaqDevice.cpp  UsbDevice.cpp
backend/src/Devices/Concrete/: DelsysAnalogDevice.cpp  DelsysEmgDevice.cpp  LiveDataStreaming.cpp  MagstimRapidDevice.cpp  NidaqDevice.cpp
backend/src/Devices/Data/: CollectorData.cpp  Data.cpp  DataCollection.cpp  DataDevices.cpp  DataPoint.cpp  DevicesData.cpp  TimeSeries.cpp  TimeSeriesData.cpp
backend/src/Devices/Generic/: AsyncDataCollector.cpp  AsyncDevice.cpp  CollectorData.cpp  DataCollector.cpp  DelsysBaseDevice.cpp  Device.cpp  SerialPortDevice.cpp  TcpDevice.cpp  UsbDevice.cpp
backend/src/Server/: CMakeLists.txt  TcpClient.cpp  TcpServer.cpp
backend/src/Utils/: Benchmark.cpp  CMakeLists.txt  Error.cpp  GenericCallback.cpp  Logger.cpp  Path.cpp  String.cpp  Timer.cpp  Timestamp.cpp  UsbDevice.cpp
backend/test/: CMakeLists.txt  test_analyzer.cpp  test_data.cpp  test_delsys.cpp  test_devices.cpp  test_lokomat.cpp  test_magstim.cpp  test_nidaq.cpp  test_server.cpp  test_utils.cpp  test_utils.h  utils.h
docs/: contributing.md  pull_request_template.md
examples/: main.py
frontend/: .gitignore  .metadata  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/managers/: database_manager.dart  neurobio_client.dart  predictions_manager.dart
frontend/lib/models/: ack.dart  command.dart  commands.dart  data.dart  database_manager.dart  emg_time_series_data.dart  lokomat_fes_server_interface.dart  neurobio_client.dart  nidaq_data.dart  prediction_data.dart  (+10 more)
frontend/test/: command_test.dart  data_test.dart  prediction_model_test.dart  server_communication_test.dart  stimulation_test.dart
lokomat_fes/: __init__.py
lokomat_fes/common/: data.py  logger.py
lokomat_fes/gui/: __init__.py  gui_console.py  gui_external.py  gui_generic.py
lokomat_fes/lokomat_nidaq/: __init__.py  nidaq_mock.py
lokomat_fes/nidaq/: __init__.py  data.py  devices.py  generic_nidaq.py  lokomat_nidaq.py  lokomat_nidaq_mock.py  mocks.py  nidaq_mock.py  perpetual_timer.py
lokomat_fes/planner/: data_analyser.py  planner.py  stimulation.py
lokomat_fes/rehastim/: __init__.py  data.py  devices.py  lokomat_rehastim.py  lokomat_rehastim_mock.py  mocks.py  pysciencemode_interfaces.py  rehastim_interface.py  stimulation.py
lokomat_fes/runner/: __init__.py  runner_console.py  runner_generic.py  runner_tcp.py  runner_tcpip.py
lokomat_fes/scheduler/: data_analyser.py  scheduler.py  stimulation.py
server/: .coveragerc  .gitignore  LICENSE  README.md  environment.yml  setup.py
server/docs/: contributing.md
server/examples/: main.py
server/lokomat_fes/: __init__.py
server/tests/: test_common_data.py  test_nidaq_data.py  test_nidaq_mock.py  test_rehastim_data.py  test_rehastim_mock.py
tests/: test_common_data.py  test_nidaq_data.py  test_nidaq_mock.py  test_rehastim_data.py  test_rehastim_mock.py
(+39 files in other folders)
